Undoing in pose mode destroys the entire pose. #63035

Closed
opened 2019-03-28 00:31:50 +01:00 by Luciano Muñoz Sessarego · 23 comments

System Information
Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel HD Graphics 4000 OpenGL Engine Intel Inc. 4.1 INTEL-12.4.7

Blender Version
Broken: version: 2.80 (sub 49), branch: blender2.7, commit date: 2019-03-16 23:34, hash: cc5bdf0293
Worked: (optional)

Short description of error
when you are posing a few bones / controllers in pose mode, if they are keyed and dont set a key right away you hit undo you lose the entire pose not just the last control you moved posed scaled or rotated.

Exact steps for others to reproduce the error

  • open any rig (like victor) or any other
  • key all the character
  • go to an other frame in the timeline
  • move an arm
  • move a leg
  • scale the head
  • hit undo once
  • everything goes back to the keyed pose

undo problem.mov

**System Information** Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits Graphics card: Intel HD Graphics 4000 OpenGL Engine Intel Inc. 4.1 INTEL-12.4.7 **Blender Version** Broken: version: 2.80 (sub 49), branch: blender2.7, commit date: 2019-03-16 23:34, hash: `cc5bdf0293` Worked: (optional) **Short description of error** when you are posing a few bones / controllers in pose mode, if they are keyed and dont set a key right away you hit undo you lose the entire pose not just the last control you moved posed scaled or rotated. **Exact steps for others to reproduce the error** - open any rig (like victor) or any other - key all the character - go to an other frame in the timeline - move an arm - move a leg - scale the head - hit undo once - everything goes back to the keyed pose [undo problem.mov](https://archive.blender.org/developer/F6893181/undo_problem.mov)

#63236 was marked as duplicate of this issue

#63236 was marked as duplicate of this issue
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Yes, can reproduce.

This did not happen in 2.79, so it is a definite regression since then.

Yes, can reproduce. This did not happen in 2.79, so it is a definite regression since then.
Campbell Barton was assigned by William Reynish 2019-03-28 09:52:41 +01:00

I think you did some work on undo lately?

I think you did some work on undo lately?
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I think this is completely unrelated to armatures.
The same problem can be reproduced on a simple cube that has one keyframe for the location.
Undoing after the cube has been moved multiple times, resets its position to the keyframe.

So maybe it is related to 0e9ea707b5.

I think this is completely unrelated to armatures. The same problem can be reproduced on a simple cube that has one keyframe for the location. Undoing after the cube has been moved multiple times, resets its position to the keyframe. So maybe it is related to 0e9ea707b5.

Added subscriber: @billyand

Added subscriber: @billyand
Author
Member

Added subscriber: @jacques-3

Added subscriber: @jacques-3
Author
Member

@JacquesLucke maybe it is!, have we got any solutions for this yet?

@JacquesLucke maybe it is!, have we got any solutions for this yet?

Added subscriber: @ShunsukeSaito

Added subscriber: @ShunsukeSaito
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

Added subscriber: @AdamKlassen

Added subscriber: @AdamKlassen

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

@Sergey, this one might be more related to the dependency graph than the undo system. I have not investigated, but I would guess what is happening here is that the after undo, the dependency graph is re-evaluating animation. Not sure how this worked in 2.7.

@Sergey, this one might be more related to the dependency graph than the undo system. I have not investigated, but I would guess what is happening here is that the after undo, the dependency graph is re-evaluating animation. Not sure how this worked in 2.7.

@brecht, this is similar to #62092. We should really get rid of animation update in deg_graph_on_visible_update, but then am not really sure how linked proxies and linked action datablock are supposed to be tagged for update on file load? (note the comment is not really complete, opening Spring files leaves characters in a T-pose if we don't tag animation for recalc).

@brecht, this is similar to #62092. We should really get rid of animation update in `deg_graph_on_visible_update`, but then am not really sure how linked proxies and linked action datablock are supposed to be tagged for update on file load? (note the comment is not really complete, opening Spring files leaves characters in a T-pose if we don't tag animation for recalc).

@brecht, on a side note, it seems there is a global undo happening now? Otherwise i don't know why dependency graph is freed. Seems quite an overkill to me. Is this really intentional?

@brecht, on a side note, it seems there is a global undo happening now? Otherwise i don't know why dependency graph is freed. Seems quite an overkill to me. Is this really intentional?
Campbell Barton removed their assignment 2019-06-05 17:13:50 +02:00
Sergey Sharybin was assigned by Campbell Barton 2019-06-05 17:13:50 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This seems more depsgraph related, assigning to sergey.

This seems more depsgraph related, assigning to sergey.
Sergey Sharybin was unassigned by Brecht Van Lommel 2019-06-05 17:21:20 +02:00

For pose mode we always use global undo, there exists no local undo for it. The same issue exists for any animated property in object mode, so it's not specifically about pose mode anyway.

I guess we could skip the animation update specifically for undo, but not file load. Or is it about skipping animation update for local datablocks, but not linked ones?

For pose mode we always use global undo, there exists no local undo for it. The same issue exists for any animated property in object mode, so it's not specifically about pose mode anyway. I guess we could skip the animation update specifically for undo, but not file load. Or is it about skipping animation update for local datablocks, but not linked ones?
Sergey Sharybin was assigned by Brecht Van Lommel 2019-06-05 17:21:36 +02:00

This issue was referenced by 2819b60933

This issue was referenced by 2819b609339b907421dc25c00223950ccee381ab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63035
No description provided.